# rusty_httpd

./: .gitignore  Cargo.toml  README.md  build.cmd  build.rs  build.sh  dump.sh
.cargo/: config
public/: index.html
src/: main.rs  server.rs
src/http/: content_type.rs  headers.rs  method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
src/utils/: mod.rs  value.rs
src/web/: mod.rs  web_handler.rs
