[package]
edition = "2021"
name = "rusty_httpd"
version = "1.0.1"

[dependencies]
case_insensitive_hashmap = "1.0.0"
const_format = "0.2.30"
crossbeam-channel = "0.5.6"
ctrlc = "3.2.4"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"
mtcp-rs = "0.1.8"
num_cpus = "1.15.0"
rand = "0.8.5"
regex = "1.7.1"
urlencoding = "2.1.2"
