[package]
edition = "2021"
name = "rusty_httpd"
version = "1.0.3"
build = "build.rs"

[profile.release]
debug = false
lto = true
opt-level = 3
strip = true

[dependencies]
case_insensitive_hashmap = "1.0.0"
crossbeam-channel = "0.5.6"
ctrlc = "3.2.4"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.10.0"
mtcp-rs = "0.1.11"
num_cpus = "1.15.0"
rand = "0.8.5"
regex = "1.7.1"
urlencoding = "2.1.2"

[build-dependencies]
winres = "0.1.12"
